--- a/templates/courrier/exShow.html.twig
+++ b/templates/courrier/exShow.html.twig
@@ -97,8 +97,8 @@
         {% endfor %}
         </tbody>
     </table>*/#}
-    {{ data }}
-    <script>
+    
+  {#  <script>
         $(document).ready(function () {
             $.ajax({
                 url : '{{ path('ajax_excel') }}' ,
@@ -113,4 +113,5 @@
 
         })
     </script>
+    #}
 {% endblock %}
