--- a/templates/courrier/index.html.twig
+++ b/templates/courrier/index.html.twig
@@ -23,7 +23,7 @@
             <div class="modal-content">
                 <!--Header-->
                 <div class="modal-header text-center">
-                    <h4 class="modal-title white-text w-100 font-weight-bold py-2">Nouveau courrier</h4>
+                    <h4 class="modal-title white-text w-100 font-weight-bold py-2">courrier</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true" class="white-text">&times;</span>
                     </button>
@@ -52,11 +52,14 @@
                             {{ form_widget(form.fichier)}}
                         </div>
                         <div class="form-group">
+
+
                             {{ form_label(form.recipient)}}
                             {{ form_widget(form.recipient)}}
                         </div>
 
                     </div>
+
                     <br />
 
 
