--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -76,7 +76,7 @@
     <div class="container">
         <h1>Listes</h1>
 
-        <table class="table table-striped table-bordered table_data">
+        <table class="table table-striped table-bordered table_data2">
             <thead>
             <tr>
                 <th>Id</th>
