--- a/templates/after_log/page.html.twig
+++ b/templates/after_log/page.html.twig
@@ -26,10 +26,10 @@
                                <img src="{{ asset('assets/svg/envelope.svg') }}">
                                <span class="badge rounded-pill badge-notification bg-danger">{{ app.user.received|length }}</span>
                         </a>
-                         
+
                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                               <a class="dropdown-header" href="#" style="background-color:blue;">Titre</a>
-                            
+
                                 {% for courrier in app.user.received %}
                                     <a class="dropdown-item" href="#">{{ courrier.nomC }}</a>
                                 {% endfor %}
@@ -41,14 +41,44 @@
                     </div>
                 </li>
             </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                <a href="{{ path("received") }}" class="badge">
-                   <img src="{{ asset('assets/svg/envelope.svg') }}">
-                    <span class="badge rounded-pill badge-notification bg-danger">{{ app.user.received|length }}</span>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a  class="nav-link dropdown-toggle" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img src="{{ asset('assets/svg/envelope.svg') }}">
+
+                    <span class="badge rounded-pill badge-notification bg-danger">
+                          {{ app.user.received|length }}
+
+
+
+                    </span> </a>
+                <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
+                    <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
+                    {% for use in app.user.received %}
+                    <a href="#" class="d-flex hope" style="height:4rem;">
+                        <div >
+                            <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
+                        </div>
+                        <div style="display:block;">
+                            <div class="text">
+                                {{ use.nomC}}
+                            </div>
+                            <div>
+                            De: {{ use.sender.Nom }} , {{ use.status }}
+                            </div>
+
+                        </div>
+                    </a>
+                {% endfor %}
+
+
+                    {# <div class="dropdown-divider"></div> #}
+                    <a class="dropdown-item text-center" href="{{ path('received') }}">Voir tous les courriers</a>
+                </div>
+
                 </a>
-                </li>
-            </ul>
+            </li>
+        </ul>
        {# <div class="topbar-divider d-none d-sm-block"> #}
 
             <ul class="navbar-nav">
