--- a/templates/courrier/send.html.twig
+++ b/templates/courrier/send.html.twig
@@ -17,24 +17,54 @@
                     {#  <li class="nav-item">
                           <a class="nav-link" href="#">Link</a>
                       </li>#}
-                    <li class="nav-item dropdown">
+                    {#  <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Courrier
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="{{ path("received") }}">Boites de receptions</a>
                             <a class="dropdown-item" href="{{ path("send") }}">Courrier envoyés</a>
-                           {# <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>#}
-                        </div>
+                            {#<div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>#}
                     </li>
 
                 </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="{{ path("received") }}">
+                    <li class="nav-item dropdown">
+                        <a  class="nav-link dropdown-toggle" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <img src="{{ asset('assets/svg/envelope.svg') }}">
-                            <span class="badge rounded-pill badge-notification bg-danger">{{ app.user.received|length }}</span>
+
+                            <span class="badge rounded-pill badge-notification bg-danger">
+                          {{ app.user.received|length }}
+
+
+
+                    </span> </a>
+                        <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
+                            <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
+                            {% for use in app.user.received %}
+                                <a href="#" class="d-flex hope" style="height:4rem;">
+                                    <div >
+                                        <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
+                                    </div>
+                                    <div style="display:block;">
+                                        <div class="text">
+                                            {{ use.nomC}}
+                                        </div>
+                                        <div>
+                                            De: {{ use.sender.Nom }} , {{ use.status }}
+                                        </div>
+
+                                    </div>
+                                </a>
+                            {% endfor %}
+
+
+                            {# <div class="dropdown-divider"></div> #}
+                            <a class="dropdown-item text-center" href="{{ path('received') }}">Voir tous les courriers</a>
+                        </div>
+
                         </a>
                     </li>
                 </ul>
@@ -54,7 +84,7 @@
                         <li class="nav-item">
                             <span class="mr-2 d-none d-flex text-gray-600 small"> {{ user.Nom }}</span>
                             <img src ="{{asset('assets/svg/undraw_profile.svg')}}" class="img-profile rounded-circle dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right text-center" aria-labelledby="dropdownMenuButton">
                                 <p class="dropdown-item">
                                 <h2>IP:</h2><p>{{ user.IP }}</p>
                                 <h2>Nom:</h2><p>{{ user.Nom }}</p></p>
