--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -18,24 +18,54 @@
                     {#  <li class="nav-item">
                           <a class="nav-link" href="#">Link</a>
                       </li>#}
-                    <li class="nav-item dropdown">
+                    {#  <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Courrier
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      {#  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="{{ path("received") }}">Boites de receptions</a>
                             <a class="dropdown-item" href="{{ path("send") }}">Courrier envoyés</a>
                             {#<div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>#}
-                        </div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>#}
                     </li>
 
                 </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="{{ path("received") }}">
+                    <li class="nav-item dropdown">
+                        <a  class="nav-link dropdown-toggle" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <img src="{{ asset('assets/svg/envelope.svg') }}">
-                            <span class="badge rounded-pill badge-notification bg-danger">{{ app.user.received|length }}</span>
+
+                            <span class="badge rounded-pill badge-notification bg-danger">
+                          {{ app.user.received|length }}
+
+
+
+                    </span> </a>
+                        <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
+                            <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
+                            {% for use in app.user.received %}
+                                <a href="#" class="d-flex hope" style="height:4rem;">
+                                    <div >
+                                        <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
+                                    </div>
+                                    <div style="display:block;">
+                                        <div class="text">
+                                            {{ use.nomC}}
+                                        </div>
+                                        <div>
+                                            De: {{ use.sender.Nom }} , {{ use.status }}
+                                        </div>
+
+                                    </div>
+                                </a>
+                            {% endfor %}
+
+
+                            {# <div class="dropdown-divider"></div> #}
+                            <a class="dropdown-item text-center" href="{{ path('received') }}">Voir tous les courriers</a>
+                        </div>
+
                         </a>
                     </li>
                 </ul>
@@ -74,8 +104,8 @@
 
 {% block body %}
     <div class="container">
-        <h1>Listes</h1>
-
+        <h1 class="text-center">Listes</h1>
+        <a href="{{ path('user_new') }}" class="btn btn-primary">Ajouter un utilisateur</a>
         <table class="table table-striped table-bordered table_data2">
             <thead>
             <tr>
@@ -118,7 +148,6 @@
             </tbody>
         </table>
 
-        <a href="{{ path('user_new') }}" class="btn btn-primary">Créer un utilisateur</a>
     </div>
 
 
