--- a/templates/courrier/index.html.twig
+++ b/templates/courrier/index.html.twig
@@ -75,4 +75,8 @@
             </div>
         </div>
     </section>
+    <a class="scroll-to-top rounded" href="#" style="display: inline;">
+        <img src="{{asset('assets/svg/profile.svg')}}">
+    </a>
+
 {% endblock %}
