--- a/templates/courrier/send.html.twig
+++ b/templates/courrier/send.html.twig
@@ -45,7 +45,7 @@
                             <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
                             {% for use in app.user.received %}
                                 <a href="#" class="d-flex hope" style="height:4rem;">
-                                    <div >
+                                    <div class ="jo">
                                         <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
                                     </div>
                                     <div style="display:block;">
@@ -82,8 +82,8 @@
 
                     <div class="dropdown">
                         <li class="nav-item">
-                            <span class="mr-2 d-none d-flex text-gray-600 small"> {{ user.Nom }}</span>
-                            <img src ="{{asset('assets/svg/undraw_profile.svg')}}" class="img-profile rounded-circle dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                           {# <span class="mr-2 d-none d-flex text-gray-600 small"> {{ user.Nom }}</span> #}
+                            <img src ="{{asset('assets/svg/4.png')}}" class="img-profile rounded-circle dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="dropdown-menu dropdown-menu-right text-center" aria-labelledby="dropdownMenuButton">
                                 <p class="dropdown-item">
                                 <h2>IP:</h2><p>{{ user.IP }}</p>
@@ -114,7 +114,7 @@
     </section>#}
 
     <section class="container-fluid" style="margin-top: 70px">
-        <div class="card text-center">
+        <div class="card card-trap text-center">
             <div class="card-header">   <div class="container"><h2>Courrier envoyés</h2></div></div>
             <div class="card-body">
                 <table class="table table-striped table-bordered table_data">
@@ -162,4 +162,74 @@
 
 
     </section>
+
+    <a href="" class="scroll-to-top rounded" data-toggle="modal" data-target="#souscription2" style="display: inline;">
+        <img src="{{asset('assets/svg/notetask.png')}}" style="height:60px;" class="joker">
+    </a>
+    {# ------------------------------------------------------------------------ #}
+
+    <div class="modal fade" id="souscription2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog modal-notify modal-warning" role="document">
+            <!--Content-->
+            <div class="modal-content">
+                <!--Header-->
+                <div class="modal-header text-center">
+                    <h4 class="modal-title white-text w-100 font-weight-bold py-2">Nouveau courrier</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <!--Body-->
+                <div class="modal-body">
+
+                    {{ form_start(form) }}
+
+                    <div class="form-group">
+                        <div class="form-group">
+                            {{ form_label(form.nom_c)}}
+                            {{ form_widget(form.nom_c)}}
+
+                        </div>
+                        <div class="form-group">
+                            {{ form_label(form.notes)}}
+                            {{ form_widget(form.notes)}}
+                        </div>
+                        <div class="form-group">
+                            {{ form_label(form.status)}}
+                            {{ form_widget(form.status)}}
+                        </div>
+                        <div class="form-group">
+                            {{ form_label(form.fichier)}}
+                            {{ form_widget(form.fichier)}}
+                        </div>
+                        <div class="form-group">
+                            {% set var = user.nom  %}
+                            {{ user.nom }}
+
+                            {{ form_label(form.recipient)}}
+                            {{ form_widget(form.recipient)}}
+                        </div>
+
+                    </div>
+                    <br />
+
+
+
+                </div>
+
+                <!--Footer-->
+                <div class="modal-footer justify-content-center">
+                    <a type="button"> {{form_widget(form.envoyer)}} <i class="fas fa-paper-plane-o ml-1"></i></a>
+                </div>
+            </div>
+            {{ form_end(form) }}
+            <!--/.Content-->
+        </div>
+    </div>
+
+    {#------------------------------------------------------------------------- #}
+
+
 {% endblock %}
