--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -32,8 +32,8 @@
                  </ul>
                  <ul class="navbar-nav">
                      <li class="nav-item dropdown">
-                         <a  class="nav-link dropdown-toggle" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                             <img src="{{ asset('assets/svg/envelope.svg') }}">
+                         <a  class="nav-link" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                             <img src="{{ asset('assets/svg/envelope.svg') }}" style="height:30px;">
 
                              <span class="badge rounded-pill badge-notification bg-danger">
                           {{ app.user.received|length }}
@@ -42,23 +42,32 @@
 
                     </span> </a>
                          <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
-                             <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
-                             {% for use in app.user.received %}
-                                 <a href="#" class="d-flex hope" style="height:4rem;">
-                                     <div class ="jo">
-                                         <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
-                                     </div>
-                                     <div style="display:block;">
-                                         <div class="text">
-                                             {{ use.nomC}}
-                                         </div>
-                                         <div>
-                                             De: {{ use.sender.Nom }} , {{ use.status }}
-                                         </div>
+                            
+                            <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
+                             {% if app.user.received|length == 0 %}
+                                <p class="text-center"> Aucun courrier reçus </p>
 
-                                     </div>
-                                 </a>
-                             {% endfor %}
+                                {% else %}
+                                    {% for liste in listeCourrier %}
+                                        {% if liste.recipient.id == user.id %}
+
+                                            <a href="#" class="d-flex hope" style="height:4rem;">
+                                                <div class ="jo">
+                                                    <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
+                                                </div>
+                                                <div style="display:block;">
+                                                    <div class="text" style="color:black;">
+                                                        {{ liste.nomC }}
+                                                    </div>
+                                                    <div style="color:#b7b9cc;" class="text-truncate">
+                                                        {{ liste.sender.nom}} , {{ liste.status}}
+                                                    </div>
+
+                                                </div>
+                                            </a>
+                                        {% endif %}
+                                    {% endfor %}
+                             {% endif %}
 
 
                              {# <div class="dropdown-divider"></div> #}
