--- a/templates/courrier/received.html.twig
+++ b/templates/courrier/received.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Section Courrier{% endblock %}
+{% block title %}Boites de réceptions{% endblock %}
 {% block navbar %}
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
