--- a/templates/courrier/exShow.html.twig
+++ b/templates/courrier/exShow.html.twig
@@ -1,17 +1,179 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Section Courrier{% endblock %}
+ {% block navbar %}
+     <header>
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+             <a class="navbar-brand" href="{{ path('page_index', {id: user.id}) }}"><h2>Accueil</h2></a>
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                 <span class="navbar-toggler-icon"></span>
+             </button>
 
+             <li class="collapse navbar-collapse" id="navbarSupportedContent">
+                 <ul class="navbar-nav mr-auto">
+                     <li class="nav-item active">
+                         {#<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>#}
+                     </li>
+                     {#  <li class="nav-item">
+                           <a class="nav-link" href="#">Link</a>
+                       </li>#}
+                     {#      <li class="nav-item dropdown">
+                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                 Courrier
+                             </a>
+                             {#  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                               <a class="dropdown-item" href="{{ path("received") }}">Boites de receptions</a>
+                               <a class="dropdown-item" href="{{ path("send") }}">Courrier envoyés</a>
+                               {#<div class="dropdown-divider"></div>
+                               <a class="dropdown-item" href="#">Something else here</a>
+                           </div>#}
+                     </li>
+
+                 </ul>
+                 <ul class="navbar-nav">
+                     <li class="nav-item dropdown">
+                         <a  class="nav-link" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                             <img src="{{ asset('assets/svg/envelope.svg') }}" style="height:30px;">
+
+                             <span class="badge rounded-pill badge-notification bg-danger">
+                          {{ app.user.received|length }}
+
+
+
+                    </span> </a>
+                         <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
+
+                             <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
+                             {% if app.user.received|length == 0 %}
+                                 <p class="text-center"> Aucun courrier reçus </p>
+
+                             {% else %}
+                                 {% for liste in listeCourrier %}
+                                     {% if liste.recipient.id == user.id %}
+
+                                         <a href="#" class="d-flex hope" style="height:4rem;">
+                                             <div class ="jo">
+                                                 <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
+                                             </div>
+                                             <div style="display:block;">
+                                                 <div class="text" style="color:black;">
+                                                     {{ liste.nomC }}
+                                                 </div>
+                                                 <div style="color:#b7b9cc;" class="text-truncate">
+                                                     {{ liste.sender.nom}} , {{ liste.status}}
+                                                 </div>
+
+                                             </div>
+                                         </a>
+                                     {% endif %}
+                                 {% endfor %}
+                             {% endif %}
+
+
+                             {# <div class="dropdown-divider"></div> #}
+                             <a class="dropdown-item text-center" href="{{ path('received') }}">Voir tous les courriers</a>
+                         </div>
+
+                         </a>
+                     </li>
+                 </ul>
+                 <ul class="navbar-nav">
+                     <li class="nav-item">
+                         {% if is_granted('ROLE_ADMIN') %}
+                             <a class="nav-link" href="{{ path('user_index') }}">Liste d'utilisateur</a>
+
+
+                         {% endif %}
+
+                     </li>
+                 </ul>
+                 <ul class="navbar-nav">
+
+                     <div class="dropdown">
+                         <li class="nav-item">
+                             {# <span class="mr-2 d-none d-flex text-gray-600 small"> {{ user.Nom }}</span> #}
+                             <img src ="{{asset('assets/svg/4.png')}}" class="img-profile rounded-circle dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                                 <p class="dropdown-item">
+                                 <h2>IP:</h2><p>{{ user.IP }}</p>
+                                 <h2>Nom:</h2><p>{{ user.Nom }}</p></p>
+
+                                 <div class="dropdown-divider"></div>
+                                 <a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
+                             </div>
+                         </li>
+                     </div>
+                 </ul>
+                 </div>
+             </li>
+         </nav>
+     </header>
+ {% endblock %}
 {% block body %}
-    <style>
-        body{
-            margin:0;
+    <h4 class="text-center"> Pieces</h4>
+    <table style="margin: 50px;" class="table table-striped table-bordered table_data">
+        <thead></thead>
+        <tr>
+            <th>Nom du courrier</th>
+            <th>nom</th>
+            <th>prenom</th>
+            <th>numero</th>
+            <th>Valide</th>
+        </tr>
+        <tbody>
+        {% for piece in upload %}
+            <tr>
+                <td>{{ piece.courier.nomC }} </td>
+                <td>{{ piece.nom }}</td>
+                <td> {{ piece.prenom }} </td>
+                <td> {{ piece.numero }} </td>
+                {% set isChecked = piece.valide != 0 ? 'checked' : ''  %}
+                <td> <input type="checkbox" {{ isChecked }} class="form-control" onchange="setValidate({{ piece.id }})">
 
+                </td>
+
+            </tr>
+
+        {% endfor %}
+
+        </tbody>
+
+    </table>
+    <a class="btn btn-success" href="{{ path('received') }}"> OK </a>
+
+    <script>
+        // ajax modification de la valeur de la colone validate
+        function setValidate(id){
+            $.ajax({
+                url : '{{ path('ajax_validate_courier') }}' ,
+                method : 'POST',
+                data : {id : id , nom :'ruddy'},// @ToDo recuperer id
+                success : function (data) {
+                    //alert ('reussit')
+                }
+
+            });
         }
-    </style>
-<div class="excel_show" ></div>
+        $(document).ready(function () {
 
-   {# {%  set dataHeader = data[0] %}
+        })
+
+    </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+   {# ------------------------------------------------------------------------------------------
+   {%  set dataHeader = data[0] %}
     {%  set count = 0 %}
     <table class="table table-striped table-bordered table_data">
     <thead>
@@ -51,5 +213,5 @@
 
         })
     </script>
-    #}
+   ------------------------------------------------------------------------------------------------------------- #}
 {% endblock %}
