--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,7 +13,7 @@
     margin-left: -.75rem;
 }
 
-input[type="checkbox"]
+input[type="checkbox"].user_check
 {
 
     position: relative;
@@ -26,11 +26,11 @@ input[type="checkbox"]
     box-shadow: inset 0 0 5px rgba(0,0,0,.2);
     transition:.5s;
 }
-input:checked[type="checkbox"]
+input:checked[type="checkbox"].user_check
 {
     background: #03a9f4;
 }
-input[type="checkbox"]:before
+input[type="checkbox"].user_check:before
 {
     content: '';
     position: absolute;
@@ -45,7 +45,7 @@ input[type="checkbox"]:before
     transition:.5s;
 
 }
-input:checked[type="checkbox"]:before
+input:checked[type="checkbox"].user_check:before
 {
     left:40px;
 }
