--- a/templates/courrier/received.html.twig
+++ b/templates/courrier/received.html.twig
@@ -42,6 +42,7 @@
 
                         <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
                             <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
+
                              {% if app.user.received|length == 0 %}
                                 <p class="text-center"> Aucun courrier reçus </p>
 
@@ -49,7 +50,7 @@
                                     {% for liste in listeCourrier %}
                                         {% if liste.recipient.id == user.id %}
 
-                                            <a href="#" class="d-flex hope" style="height:4rem;">
+                                            <a href="{{ path("excel", {id: liste.id}) }}" class="d-flex hope" style="height:4rem;">
                                                 <div class ="jo">
                                                     <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
                                                 </div>
