--- a/templates/courrier/received.html.twig
+++ b/templates/courrier/received.html.twig
@@ -34,10 +34,21 @@
                     <li class="nav-item dropdown">
                         <a  class="nav-link" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <img src="{{ asset('assets/svg/envelope.svg') }}" style="height:30px;">
-
-                            <span class="badge rounded-pill badge-notification bg-danger">
-                          {{ app.user.received|length }} 
-                            </span>
+                            {# Debut de la gestion de la notification#}
+                            {% set i = 0 %}
+                            {% for liste in listeCourrier %}
+                                {% if liste.recipient.id == user.id %}
+                                    {% if liste.isRead == 0  %}
+                                        {% set i = i + 1 %}
+                                    {% endif %}
+                                {% endif %}
+                            {% endfor %}
+                            {% if i == 0 %}
+                                <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
+                            {% else %}
+                                <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter ">  {{ i }}</span>
+                            {% endif %}
+                            {# fin #}
                         </a>
 
                         <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
@@ -49,13 +60,16 @@
                                 {% else %}
                                     {% for liste in listeCourrier %}
                                         {% if liste.recipient.id == user.id %}
-
-                                            <a href="{{ path("excel", {id: liste.id}) }}" class="d-flex hope" style="height:4rem;">
+                                                {% set bold = "" %}
+                                                {% if liste.isRead == 0 %}
+                                                    {% set bold ="font-weight-bold" %}
+                                                {% endif %}
+                                            <a href="{{ path("excel", {id: liste.id}) }}" class="d-flex hope {{bold}}" style="height:4rem;">
                                                 <div class ="jo">
                                                     <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
                                                 </div>
                                                 <div style="display:block;">
-                                                    <div class="text" style="color:black;">
+                                                    <div class="text " style="color:black;">
                                                         {{ liste.nomC }}
                                                     </div>
                                                     <div style="color:#b7b9cc;" class="text-truncate">
@@ -129,11 +143,15 @@
                             </thead>
                             <tbody>
                             {% for courrier in app.user.received|reverse %}
+                                {% set bold = "" %}
+                                {% if courrier.isRead == 0 %}
+                                    {% set bold ="font-weight-bold" %}
+                                {% endif %}
                             <tr>
-                                <td>{{ courrier.sender.Nom }}</td>
-                                <td>{{ courrier.sender.email }}</td>
-                                <td>{{ courrier.nomC }}</td>
-                                <td>
+                                <td class="{{bold}}">{{ courrier.sender.Nom }}</td>
+                                <td class="{{bold}}">{{ courrier.sender.email }}</td>
+                                <td class="{{bold}}">{{ courrier.nomC }}</td>
+                                <td class="{{bold}}">
                                     {% if courrier.status == "TRES URGENT" %}
                                     <span style="background-color: #D31C1C; padding: 7px; border-radius: 50px; color:#fff;"> {{ courrier.status }} </span>
                                     {% elseif courrier.status == "URGENT" %}
@@ -143,9 +161,9 @@
                                             <span style="background-color: #28A2E8; padding: 7px; border-radius: 50px; color:#fff;"> {{ courrier.status }} </span>
                                     {% endif %}
                                 </td>
-                                <td>{{ courrier.notes() }}</td>
-                                <td>{{ courrier.fichier }}</td>
-                                <td>{{ courrier.createdAt|date("d/m/Y")}}</td>
+                                <td class="{{bold}}"><div>{{ courrier.notes() }}</div></td>
+                                <td class="{{bold}}">{{ courrier.fichier }}</td>
+                                <td class="{{bold}}">{{ courrier.createdAt|date("d/m/Y")}}</td>
                                 {#|date("m/d/Y")#}
 
                                 <td>
@@ -243,8 +261,7 @@
                                                             {{ form_widget(form.fichier)}}
                                                         </div>
                                                         <div class="form-group">
-                                                            {% set var = user.nom  %}
-                                                            {{ user.nom }}
+
 
                                                             {{ form_label(form.recipient)}}
                                                             {{ form_widget(form.recipient)}}
