--- a/templates/courrier/exShow.html.twig
+++ b/templates/courrier/exShow.html.twig
@@ -4,7 +4,7 @@
  {% block navbar %}
      <header>
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-             <a class="navbar-brand" href="{{ path('page_index', {id: user.id}) }}"><h2>Accueil</h2></a>
+             <a class="navbar-brand" href="{{ path('page_index', {id: user.id}) }}"><h2>ACCUEIL</h2></a>
              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
              </button>
@@ -34,13 +34,22 @@
                      <li class="nav-item dropdown">
                          <a  class="nav-link" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                              <img src="{{ asset('assets/svg/envelope.svg') }}" style="height:30px;">
-
-                             <span class="badge rounded-pill badge-notification bg-danger">
-                          {{ app.user.received|length }}
-
-
-
-                    </span> </a>
+                                 {# Debut de la gestion de la notification#}
+                                 {% set i = 0 %}
+                                 {% for liste in listeCourrier %}
+                                     {% if liste.recipient.id == user.id %}
+                                         {% if liste.isRead == 0  %}
+                                             {% set i = i + 1 %}
+                                         {% endif %}
+                                     {% endif %}
+                                 {% endfor %}
+                                 {% if i == 0 %}
+                                     <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
+                                 {% else %}
+                                     <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter ">  {{ i }}</span>
+                                 {% endif %}
+                                 {# fin #}
+                         </a>
                          <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
 
                              <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
@@ -48,25 +57,28 @@
                                  <p class="text-center"> Aucun courrier reçus </p>
 
                              {% else %}
-                                 {% for liste in listeCourrier %}
-                                     {% if liste.recipient.id == user.id %}
+                                {% for liste in listeCourrier %}
+                                        {% if liste.recipient.id == user.id %}
+                                                {% set bold = "" %}
+                                                {% if liste.isRead == 0 %}
+                                                    {% set bold ="font-weight-bold" %}
+                                                {% endif %}
+                                            <a href="{{ path("excel", {id: liste.id}) }}" class="d-flex hope {{bold}}" style="height:4rem;">
+                                                <div class ="jo">
+                                                    <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
+                                                </div>
+                                                <div style="display:block;">
+                                                    <div class="text " style="color:black;">
+                                                        {{ liste.nomC }}
+                                                    </div>
+                                                    <div style="color:#b7b9cc;" class="text-truncate">
+                                                        {{ liste.sender.nom}} , {{ liste.status}}
+                                                    </div>
 
-                                         <a href="{{ path("excel", {id: liste.id}) }}"class="d-flex hope" style="height:4rem;">
-                                             <div class ="jo">
-                                                 <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
-                                             </div>
-                                             <div style="display:block;">
-                                                 <div class="text" style="color:black;">
-                                                     {{ liste.nomC }}
-                                                 </div>
-                                                 <div style="color:#b7b9cc;" class="text-truncate">
-                                                     {{ liste.sender.nom}} , {{ liste.status}}
-                                                 </div>
-
-                                             </div>
-                                         </a>
-                                     {% endif %}
-                                 {% endfor %}
+                                                </div>
+                                            </a>
+                                        {% endif %}
+                                    {% endfor %}
                              {% endif %}
 
 
@@ -110,6 +122,7 @@
      </header>
  {% endblock %}
 {% block body %}
+    
     <h4 class="text-center"> Pieces</h4>
     <table style="margin: 50px;" class="table table-striped table-bordered table_data">
         <thead></thead>
@@ -147,7 +160,7 @@
             $.ajax({
                 url : '{{ path('ajax_validate_courier') }}' ,
                 method : 'POST',
-                data : {id : id , nom :'ruddy'},// @ToDo recuperer id
+                data : {id : id },// @ToDo recuperer id
                 success : function (data) {
                     //alert ('reussit')
                 }
